--- a/css/styles.css
+++ b/css/styles.css
@@ -149,9 +149,18 @@
    margin: 20px 10px;
  }
 
- a{
+  a{
    color: black;
  }
+
+.footer-text{
+  color: black;
+}
+
+.name{
+  font-weight: bold;
+  text-decoration: none;
+}
 
  @media (max-width:1184px) {
    #title {
